--- a/config_sample.env
+++ b/config_sample.env
@@ -1,30 +1,26 @@
 # Remove this line before deploying
 
+
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID =
+BOT_TOKEN = "2021620621:AAHWHdeFLTVzZfy4pldMzcH3PCqJrtulEFQ"
+GDRIVE_FOLDER_ID = "1i9oXZ3uTleo9ZobiLlF-2ml5ebGi_8j_"
+OWNER_ID = 1782840890
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
-AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = 
-TELEGRAM_HASH = ""
+AUTO_DELETE_MESSAGE_DURATION = -1
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = 3578562
+TELEGRAM_HASH = "76bbd46bd2f6d3fcb6448337cc21c764"
 # OPTIONAL CONFIG
 DATABASE_URL = ""
 AUTHORIZED_CHATS = ""  # Split by space
 SUDO_USERS = ""  # Split by space
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = ""
+USE_SERVICE_ACCOUNTS = "fales"
+INDEX_URL = "https://s.scloud.workers.dev/0:/"
 STATUS_LIMIT = ""  # Recommend limit status to 4 tasks
-UPTOBOX_TOKEN = ""
-MEGA_API_KEY = ""
-MEGA_EMAIL_ID = ""
-MEGA_PASSWORD = ""
-BLOCK_MEGA_FOLDER = "" 
-BLOCK_MEGA_LINKS = ""
-STOP_DUPLICATE = ""
+STOP_DUPLICATE = "True"
+VIEW_LINK = "True"
 RECURSIVE_SEARCH = ""  # Search in Subfolders (only for teamdriveid or root, you can't with folderid)
 SHORTENER = ""
 SHORTENER_API = ""
@@ -44,7 +40,7 @@ CLONE_LIMIT = ""
 MEGA_LIMIT = ""
 # View Link button to open file Index Link in browser instead of direct download link
 # You can figure out if it's compatible with your Index code or not, open any video from you Index and check if the END of link from browser link bar is ?a=view, if yes make it "True" it will work (Compatible with Bhadoo Index Code)
-VIEW_LINK = ""
+
 # Add more buttons (Three buttons are already added of Drive Link, Index Link, and View Link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them, Don't fill anything in them.
 BUTTON_FOUR_NAME = ""
